[package]
name = "cuongvuong-phoenix-com-server"
version = "0.1.0"
license = "MIT"
edition = "2021"

[profile.dev]
debug = 0

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = { version = "3.0.35", features = ["chrono", "dataloader"] }
async-graphql-axum = "3.0.35"
async-trait = "0.1.52"
axum = "0.4.8"
base64 = "0.13.0"
chrono = "0.4.19"
dotenv = "0.15.0"
itertools = "0.10.3"
once_cell = "1.10.0"
serde = { version = "1.0.136", features = ["derive"] }
sqlx = { version = "0.5.11", features = ["chrono", "postgres", "runtime-tokio-native-tls", "offline"] }
thiserror = "1.0.30"
tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread"] }
tower = "0.4.12"
tower-http = { version = "0.2.5", features = ["trace", "cors"] }
tracing = "0.1.32"
tracing-subscriber = { version = "0.3.9", features = ["env-filter"] }

