[package]
name = "cuongvuong-phoenix-com-server"
version = "0.1.0"
license = "MIT"
edition = "2021"

[profile.dev]
debug = 0

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = { version = "4.0.9", features = ["chrono", "dataloader"] }
async-graphql-axum = "4.0.9"
async-trait = "0.1.53"
axum = "0.5.4"
base64 = "0.13.0"
chrono = "0.4.19"
dotenv = "0.15.0"
itertools = "0.10.3"
once_cell = "1.10.0"
serde = { version = "1.0.137", features = ["derive"] }
sqlx = { version = "0.6.1", features = ["chrono", "postgres", "runtime-tokio-native-tls", "offline"] }
thiserror = "1.0.31"
tokio = { version = "1.18.1", features = ["macros", "rt-multi-thread"] }
tower = "0.4.12"
tower-http = { version = "0.3.2", features = ["trace", "cors"] }
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }

