[package]
name = "cuongvuong-phoenix-com-server"
version = "0.1.0"
license = "MIT"
edition = "2021"

[profile.dev]
debug = 0

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = { version = "4.0.13", features = ["time", "dataloader"] }
async-graphql-axum = "4.0.13"
async-trait = "0.1.57"
axum = "0.5.16"
base64 = "0.13.0"
dotenvy = "0.15.3"
itertools = "0.10.4"
once_cell = "1.14.0"
serde = { version = "1.0.144", features = ["derive"] }
sqlx = { version = "0.6.2", features = ["time", "postgres", "runtime-tokio-native-tls", "offline"] }
thiserror = "1.0.35"
time = { version = "0.3.14", features = ["local-offset"] }
tokio = { version = "1.21.1", features = ["macros", "rt-multi-thread"] }
tower = "0.4.13"
tower-http = { version = "0.3.4", features = ["trace", "cors"] }
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }

